--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.1.1",
   "description": "An Ionic project",
   "dependencies": {
+    "@capacitor/core": "2.4.0",
+    "@capacitor/ios": "^2.4.0",
     "cordova-android": "^8.0.0",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
@@ -11,6 +13,7 @@
     "gulp-sass": "^2.0.4"
   },
   "devDependencies": {
+    "@capacitor/cli": "2.4.0",
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
